--- a/src/scss/components/_green_specs.scss
+++ b/src/scss/components/_green_specs.scss
@@ -14,11 +14,12 @@
 			display: flex;
 			align-items: center;
 			margin-bottom: 20px;
-			h3, svg {
+			svg {
 				display: inline-block;
 			}
-			h3 {
+			span {
 				margin: 0;
+				@include hsmedium($bFont);
 			}
 		}
 		li {
