--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -1,7 +1,7 @@
 <section class="leading agents agents-background">
 	<div class="container centered">
 		<h1>Our Team</h1>
-		<h2>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</h2>
+		<span>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</span>
 		<div class="grid-constrained">
 			{{ entries:listing folder="agents/garfield" }}
 			<div class="grid-3-constrained-padding">
