--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -1,18 +1,16 @@
 <section class="leading agents agents-background">
 	<div class="container centered">
 		<h1>Our Team</h1>
-		<span>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</span>
+		<p>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</p>
 		<div class="grid-constrained">
 			{{ entries:listing folder="agents/garfield" }}
 			<div class="grid-3-constrained-padding">
-				<div>
-					<a href="{{ url }}">
-						<img class="circle" src="{{ path src="{{ image }}" }}"></img>
-						<h3>{{ title }}</h3>
-					</a>
-					<p>{{ theme:partial src="svg/phone" }} {{ phone }}</p>
-					<a href="{{ email}}">{{ theme:partial src="svg/mail" }} {{ email }}</a>
-				</div>
+				<a href="{{ url }}">
+					<img class="circle" src="{{ path src="{{ image }}" }}"></img>
+					<span class="name">{{ title }}</span>
+				</a>
+				<span class="details">{{ theme:partial src="svg/phone" }} {{ phone }}</span>
+				<a href="{{ email}}"><span class="details">{{ theme:partial src="svg/mail" }} {{ email }}</span></a>
 			</div>
 			{{ /entries:listing }}
 		</div>
@@ -20,16 +18,14 @@
 		<div class="divider"><span>INTERNATIONAL</span></div>
 
 		<div class="grid-constrained">
-		{{ entries:listing folder="agents/beauchamp" }}
+			{{ entries:listing folder="agents/beauchamp" }}
 			<div class="grid-3-constrained-padding international">
-				<div>
-					<a href="{{ url }}">
-						<img class="circle" src="{{ path src="{{ image }}" }}"></img>
-						<h3>{{ title }}</h3>
-					</a>
-					<p>{{ theme:partial src="svg/phone" }} {{ phone }}</p>
-					<a href="{{ email}}">{{ theme:partial src="svg/mail" }} {{ email }}</a>
-				</div>
+				<a href="{{ url }}">
+					<img class="circle" src="{{ path src="{{ image }}" }}"></img>
+					<span class="name">{{ title }}</span>
+				</a>
+				<span class="details">{{ theme:partial src="svg/phone" }} {{ phone }}</span>
+				<a href="{{ email}}">{{ theme:partial src="svg/mail" }} <span class="details">{{ email }}</span></a>
 			</div>
 
 			{{ /entries:listing }}
