--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -22,7 +22,7 @@
 .carousel_tile_2 {
 	@include pre(2 of 12);
 	@include span(8 of 12 no-gutter);
-	&.main_tile {
+	&.main_tile, &.agent_tile {
 		@include pre(.75 of 12);
 		@include span (10.5 of 12 no-gutter);
 	}
