--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -79,8 +79,7 @@
 						<span>{{ location_granular }}</span>
 						{{ endif }}
 					</div>
-					{{ if openhouse or streeteasy_status !="active" }}
-					{{ else }}
+					{{ if openhouse or streeteasy_status !== "Active"}}
 					<div class="open-house">
 						{{ if openhouse }}
 						{{ openhouse_grid }}
@@ -93,8 +92,9 @@
 						{{ elseif streeteasy_status != "Active" }}
 						<span>{{ streeteasy_status }}</span>
 						{{ endif }}
-						{{ endif }}
-					</div>				
+					</div>	
+					{{ else }}			
+					{{ endif }}
 				</div>
 
 				<div class="property-carousel">
