--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3029,7 +3029,7 @@ section.services h3 {
 
 .property-info {
   padding: 30px;
-  padding-bottom: 0;
+  margin-bottom: 30px;
   background-color: #fff; }
 
 .property-info:before, .property-info:after {
