--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -11,15 +11,14 @@
 			<li><a class="scroll smooth" href="#buyers">Buyers</a></li>
 		</ul>
 	</nav>
-	<section class="content services">
-		
+	<section class="services">
 		<div class="container">
 			<main>
-				<h2>Individuals &amp; Familes</h2>
+				<h3>Individuals &amp; Familes</h3>
 				<h3>{{ individual_subheader }}</h3>
 				{{ individual_description }}
 				<div class="service-list">
-					<h4>Specific Service Delivered:</h4>
+					<span>Specific Service Delivered:</span>
 					<ul>
 						{{ individual_services }}
 						<li>{{ value }}</li>
@@ -63,11 +62,11 @@
 		<a id="trust" class="secondary-nav-link"></a>
 		<div class="container">
 			<main>
-				<h2>Trusts &amp; Estates</h2>
+				<H3>Trusts &amp; Estates</H3>
 				<h3>{{ trust_subheader }}</h3>
 				{{ trust_description }}
 				<div class="service-list">
-					<h4>Specific Service Delivered:</h4>
+					<span>Specific Service Delivered:</span>
 					<ul>
 						{{ trust_services }}
 						<li>{{ value }}</li>
@@ -115,11 +114,11 @@
 		<a id="institutions" class="secondary-nav-link"></a>
 		<div class="container">
 		<main>
-				<h2>Institutions</h2>
+				<H3>Institutions</H3>
 				<h3>{{ institution_subheader }}</h3>
 				{{ institution_description }}
 				<div class="service-list">
-					<h4>Specific Service Delivered:</h4>
+					<span>Specific Service Delivered:</span>
 					<ul>
 						{{ institution_services }}
 						<li>{{ value }}</li>
@@ -165,11 +164,11 @@
 		<a id="buyers" class="secondary-nav-link"></a>
 		<div class="container">
 		<main>
-				<h2>Buyers</h2>
+				<H3>Buyers</H3>
 				<h3>{{ buyers_subheader }}</h3>
 				{{ buyers_description }}
 				<div class="service-list">
-					<h4>Specific Service Delivered:</h4>
+					<span>Specific Service Delivered:</span>
 					<ul>
 						{{ buyers_services }}
 						<li>{{ value }}</li>
