--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -53,8 +53,9 @@ $hFontMI: "Copernicus-MediumItalic";
     font-style: normal;
 }
 
-h1,h2,h3 {
+h1,h2,h3,h4 {
     font-weight: 100;
+    margin: 0;
 }
 
 h1 {
