--- a/src/scss/components/_company.scss
+++ b/src/scss/components/_company.scss
@@ -10,23 +10,17 @@
 	text-align: center;
 	@include pre(2.75 of 12);
 	@include span(6.5 of 12);
-	h2 {
-		font-family: $bFont;
-		font-size: 23px;
-		line-height: 33px;
-		text-transform: uppercase;
-	}
-	h3 {
-		text-align: center;
-		margin: 0 auto;
-		font-size: 23px;
-		line-height: 33px;
-		font-weight: 700;
-		font-family: $hFontM;
-	}
 	p {
 		font-family: $hFontM;
 		line-height: 28px;
+		text-align: left
+	}
+	span {
+		@include hmedium;
+		&.company-title {
+			@include hbase($bFont);
+			font-weight: 700;
+		}
 	}
 	.divider {
 		height: 1px;
@@ -41,44 +35,9 @@
 			line-height: 33px;
 		}
 	}
-	&.inner-content{
-		h2,h4 {
-			font-family: $hFontM;
-			line-height: 46px;
-			margin-bottom: 0;
-		}
-		h2 {
-			font-size: 36px;
-			margin-bottom: 0;
-			margin-top: 20px;
-		}
-		h4 {
-			display: inline-block;
-			font-size: 26px;
-			margin-top: 0;
-			@include clearfix;
-		}
-		img {
-			text-align: center;
-			display: inline-block;
-		}
-		p {
-			text-align: left;
-		}
-		a {
-			font-family: $hFontMI;
-			font-size: 16px;
-		}
-	}
 	&.why {
-		h2 {
-			margin-bottom: 0px;
-		}
 		h3 {
-			margin-bottom: 15px;
-		}
-		p {
-			margin-top: 0;
+			text-transform: uppercase;
 		}
 		background-image: url("../img/G.svg");
 		background-repeat: no-repeat;
