--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -95,8 +95,7 @@ nav {
 				display:block;
 				text-align: center;
 				color: white;
-				font-family: $hFontM;
-				font-size: 20px;
+				@include hmedium;
 				padding-top: 20px;
 				padding-bottom: 20px;
 				&:last-of-type {
