--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -2,26 +2,26 @@
 <div class="container">
 	<div class="company">
 		<h1>Truth Builds Trust</h1>
-		<h3>At least that's how we see it</h3>
+		<span>At least that's how we see it</span>
 	</div>
 </div>
 </section>
-<section class="darkest-bg-seafoam">
+<section class="bg-darkest-seafoam">
 	<div class="container">
 		<div class="company beliefs">
-			<h2>OUR BELIEFS</h2>
+			<span class="company-title">OUR BELIEFS</span>
 			<div class="divider"></div>
-			{{ beliefs }}
+			<p>{{ beliefs }}</p>
 		</div>
 	</section>
 	<section>
 		<div class="container">
 			<div class="company why">
-				<h2>WHY GARFIELD</h2>
+				<span class="company-title">WHY GARFIELD</span>
 				<div class="divider"></div>
 				{{ why }}
 				{{ why_grid }}
-				<h2>{{ name }}</h2>
+				<h3>{{ name }}</h3>
 				<p>{{ description }}</p>
 				{{ /why_grid }}
 			</div>
@@ -30,9 +30,9 @@
 	<section class="bg-gray">
 		<div class="container">
 			<div class="company inner-content">
-				<h2>OUR HISTORY</h2>
+				<span class="company-title">OUR HISTORY</span>
 				<div class="divider"></div>
-				<h2>TOWNHOMES &amp; BUILDING SPECIALISTS SINCE 1972</h2>
+				<h3>TOWNHOMES &amp; BUILDING SPECIALISTS SINCE 1972</h3>
 				<div class="divider"></div>
 				{{ history }}
 			</div>
@@ -41,7 +41,7 @@
 	<section>
 		<div class="container">
 			<div class="company inner-content">
-				<h2>OUR INTERNATIONAL PARTNER</h2>
+				<span class="company-title">OUR INTERNATIONAL PARTNER</span>
 				<div class="divider"></div>
 				<div><img src="{{ path src="{{ international_image }}" }}" ></div>
 				<div class="divider"></div>
