--- a/src/scss/modules/_faq_list.scss
+++ b/src/scss/modules/_faq_list.scss
@@ -3,7 +3,7 @@
 	background-color: $text-green;
 	margin-top: 78px;
 	padding: 30px 0;
-	margin-bottom: 60px;
+	margin-bottom: $bPadding;
 	.container {
 		color: white;
 		font-family: $hFontM;	
