--- a/src/scss/modules/_modals.scss
+++ b/src/scss/modules/_modals.scss
@@ -1,6 +1,6 @@
 .modal-header, .modal-body, .modal-footer {
-	padding-left: 60px;
-	padding-right: 60px;
+	padding-left: $bPadding;
+	padding-right: $bPadding;
 }
 
 .modal-header {
