--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -58,11 +58,11 @@
 			</aside>
 		</div>
 	</section>
-	<section class="content services bg-seafoam">
+	<section class="services bg-seafoam">
 		<a id="trust" class="secondary-nav-link"></a>
 		<div class="container">
 			<main>
-				<H3>Trusts &amp; Estates</H3>
+				<h3>Trusts &amp; Estates</h3>
 				<h3>{{ trust_subheader }}</h3>
 				{{ trust_description }}
 				<div class="service-list">
