--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -1,6 +1,6 @@
 .agent-individual {
 	aside {
-		padding-right: 60px;
+		padding-right: $bPadding;
 		img {
 			margin-top: 183px;
 			max-width: 200px;
@@ -46,11 +46,11 @@
 		}
 	}
 	main {
-		padding: 60px;
+		padding: $bPadding;
 		background-color: #fff;
 		.agent-info {
 			@include clearfix;
-			margin-bottom: 60px;
+			margin-bottom: $bPadding;
 		}
 		.agent-info * {
 			@include span (last 9 of 9 );
@@ -59,7 +59,7 @@
 		h1 {
 			font-size: 47px;
 			margin-top: 0;
-			margin-bottom: 60px;
+			margin-bottom: $bPadding;
 		}
 		p:first-of-type, span:first-of-type {
 			margin-top: 0;
@@ -72,11 +72,11 @@
 			line-height: 26px;
 		}
 		.green-specs {
-			margin-bottom: 60px;
+			margin-bottom: $bPadding;
 			h4 {
 				padding-bottom: 20px;
 				border-bottom: 1px solid $text-green;
-				margin-bottom: 60px;
+				margin-bottom: $bPadding;
 			}
 			.press {
 				@include clearfix;
@@ -102,7 +102,7 @@
 		}
 		.agent-properties {
 			padding: 30px;
-			margin-bottom: 60px;
+			margin-bottom: $bPadding;
 			@include span(full no-gutter);
 			@include clearfix;
 		}
