--- a/src/scss/components/_blog_overview.scss
+++ b/src/scss/components/_blog_overview.scss
@@ -25,21 +25,19 @@
 		@include clearfix;
 	}
 	.blog-header {
-		font-family: $hFontM;
 		color: $light-font-color;
-		text-transform: uppercase;
-		font-size: 19px;
-		padding-bottom: 30px;
+		@include hsmedium($hFontM);
+		padding-bottom: 1.5em;
 		border-bottom: 1px solid $modal-text;
-		margin-bottom: 30px;
+		margin-bottom: 1.5em;
 	}
 	.entries {
 		@include span(full no-gutter);
 	}
 	.entry {
-		margin-bottom: 60px;
+		margin-bottom: $bPadding;
 		border-bottom: 1px solid $light-font-color;
-		padding-bottom: 60px;
+		padding-bottom: $bPadding;
 		@include span(full no-gutter);
 
 	}
@@ -78,8 +76,7 @@
 	}
 	.date,.author {
 		text-transform: none;
-		font-family: $hFontB;
-		font-size: 14px;
+		@include btiny($hFontB);
 	}
 	.author {
 		color: $text-green;
@@ -88,12 +85,10 @@
 		ul {
 			margin-bottom: 30px;
 		}
-		
 		li {
 			display: block;
 			a {
-				font-family: $hFontB;
-				font-size: 15px;				
+				@include hsmall($hFontB);
 			}
 		}
 	}
@@ -107,21 +102,12 @@
 			margin: 20px 0;
 			background-color: $modal-text;
 		}
-		h2 {
-			font-family: $hFontMI;
-			font-size: 24px;
-			line-height: 30px;
+		.blog-title {
+			@include hlarge;
 		}
 	}
-	h2 {
-		margin-top: 0;
-	}
-	p {
-		line-height: 28px;
-	}
 	.read-more {
-		font-size: 16px;
-		font-family: $hFontMI;
+		@include hbase($hFontMI);
 		color: $text-green;
 	}
 	.author-list {
@@ -132,8 +118,8 @@
 	.author-image {
 		margin-right: 10px;
 		border-radius: 50%;
-		height: 60px;
-		width: 60px;
+		height: $bPadding;
+		width: $bPadding;
 	}
 }
 
