--- a/src/scss/components/_slick_overides.scss
+++ b/src/scss/components/_slick_overides.scss
@@ -25,7 +25,7 @@ $slick-opacity-not-active: .25;
 .slick-next:before
 {
     transform: rotate(180deg);
-    margin-right: -60px;
+    margin-right: -$bPadding;
 }
 
 .press {
