--- a/src/scss/modules/_landing_subnav.scss
+++ b/src/scss/modules/_landing_subnav.scss
@@ -29,7 +29,7 @@
 		transition: all 500ms ease;
 		margin-left: auto;
 		margin-right: auto;
-		margin-top: 60px;
+		margin-top: $bPadding;
 		margin-bottom: 20px;
 		* {
 			fill: $text-green;
