--- a/statamic/_themes/main/partials/featured_post.html
+++ b/statamic/_themes/main/partials/featured_post.html
@@ -1,9 +1,8 @@
 <div class="featured">
-
 	<a href="{{ url }}" class="featured-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
 	<div class="post-details">
-		<h3>FEATURED POST</h3>
-		<a href="{{ url }}"><h2>{{ title}}</h2></a>
+		<span class="featured-title">FEATURED POST</span>
+		<a href="{{ url }}"><h3>{{ title}}</h3></a>
 		<span class="date">Posted {{ date }} by </span>
 		{{ relate:author }}
 			<a class="author" href="{{ _site_root }}blog/authors/{{ title|lower }}">
@@ -31,7 +30,7 @@
 				</a>
 			</div>
 		<div class="truncated">
-			{{ content|truncate:100 }}
+			{{ content|truncate:200 }}
 			<a class="read-more" href="{{ url }}">Read More</a>
 		</div>
 	</div>
