--- a/statamic/_themes/main/partials/neighborhood_tile.html
+++ b/statamic/_themes/main/partials/neighborhood_tile.html
@@ -1,6 +1,6 @@
 <li class="grid-item">
 	<a href="{{ url }}" class="neighborhood-tile">
-		<h2>{{ title }}</h2>
+		<div class="neighborhood-title">{{ title }}</div>
 		<div class='preview-image' style='background-image: url( {{ path src='{{ preview_image }}' }} );'></div>
 		
 	</a >
