--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -1,7 +1,6 @@
 	<section class="hero small leading" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
 		<a id="description" class="secondary-nav-link leading"></a>
 		<h1>{{ title }}</h1>
-		<!-- <h3>{{ sub_headline }}</h3> -->
 		<div class="mask"></div>
 	</section>
 	<nav id="scroll-spy-nav" class="secondary-nav">
@@ -13,25 +12,25 @@
 		</ul>
 
 	</nav>
-	<section class="content">
+	<section>
 
 		<div class="container large-body">
-			<h3>description</h3>
+			<div class="section-title">DESCRIPTION</div>
 			{{ description }}
 		</div>
 	</section>
-	<section class="content neighborhood bg-gray">
+	<section class="neighborhood bg-gray">
 		<a id="location" class="secondary-nav-link"></a>
 		<div class="container">
-			<h3>location</h3>
+			<div class="section-title">LOCATION</div>
 			<div id="map"></div>
 		</div>
-	</section class="content">
+	</section>
 
-	<section class="content">
+	<section>
 		<a id="numbers" class="secondary-nav-link"></a>
 		<div class="container">
-			<h3>by the numbers</h3>
+			<div class="section-title">BY THE NUMBERS</div>
 			<div class="grid numbers">
 				<div class="grid-6 full">
 					<h1>{{ left }}%</h1>
@@ -75,10 +74,10 @@
 			<p class="light">* These numbers are averages and fluctuate frequently. Contact us for the most up-to-date data on NYC neighborhoods and blocks.</p>
 		</div>
 	</section>
-	<section class="content dark-bg-seafoam">
+	<section class="dark-bg-seafoam">
 		<a id="other_properties" class="secondary-nav-link"></a>
 		<div class="container">
-			<h3>CURRENT PROPERTIES IN THIS NEIGHBORHOOD</h3>
+			<div class="section-title">CURRENT PROPERTIES IN THIS NEIGHBORHOOD</div>
 			{{ entries:listing folder="properties/new-york/sale|properties/new-york/lease" conditions="property_location:{title}"}}
 			{{ if no_results }}
 			<p class="no_results">We are currently have no other properties for sale or lease in this neighborhood. Be sure to check back soon.</p>
@@ -88,9 +87,9 @@
 			{{ /entries:listing }}
 		</div>
 	</section>
-	<section id="other_neighborhoods" class="content bg-gray">
+	<section id="other_neighborhoods" class="bg-gray">
 		<div class="container">
-			<h3>Other Neighborhoods</h3>
+			<div class="section-title">OTHER NEIGHBORHOODS</div>
 			<ul class="grid">
 				{{ entries:listing folder="neighborhoods/individual_neighborhoods" conditions="url:!{url}" }}	
 				{{ theme:partial src="neighborhood_tile" use_context="true" }}
