font style changes

--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -10,7 +10,7 @@
 					<span class="name">{{ title }}</span>
 				</a>
 				<span class="details">{{ theme:partial src="svg/phone" }} {{ phone }}</span>
-				<a href="{{ email}}">{{ theme:partial src="svg/mail" }} {{ email }}</span></a>
+				<a href="{{ email}}"><span class="details">{{ theme:partial src="svg/mail" }} {{ email }}</span></a>
 			</div>
 			{{ /entries:listing }}
 		</div>
