--- a/statamic/_themes/main/templates/agent_individual.html
+++ b/statamic/_themes/main/templates/agent_individual.html
@@ -3,7 +3,7 @@
 
 		<aside class="sticky">					
 			<img class="circle" src="{{ path src="{{ image }}" }}" class="img-circle" />
-			<h2>Contact {{ title }}</h2>
+			<div class="agent-name">Contact {{ title }}</div>
 			<ul>
 				<li>{{ theme:partial src="svg/phone" }} {{ phone }}</li>
 				<li>{{ theme:partial src="svg/mail" }} {{ email|link }}</li>
