--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -8,12 +8,8 @@
 			margin-left: auto;
 			margin-right: auto;
 		}
-		h2 {
-			font-family: $hFontB;
-			font-size: 22px;
-		}
-		h3 {
-			text-align: left;
+		.agent-name {
+			@include hlmedium($hFontM);
 		}
 		svg {
 			height: 25px;
