updated ownership types and street easy

--- a/statamic/_themes/main/templates/streeteasy.html
+++ b/statamic/_themes/main/templates/streeteasy.html
@@ -68,8 +68,8 @@
 		]]>
 		</description>
 		{{ endif }}
-		{{ if property_type|not_empty }}
-			<propertyType>{{ property_type }}</propertyType>
+		{{ if ownership|not_empty }}
+			<propertyType>{{ ownership }}</propertyType>
 		{{ endif }}
 		{{ if build_date|not_empty }}
 			<built>{{ build_date }}</built>
@@ -195,8 +195,8 @@
 		]]>
 		</description>
 		{{ endif }}
-		{{ if property_type|not_empty }}
-			<propertyType>{{ property_type }}</propertyType>
+		{{ if ownership|not_empty }}
+			<propertyType>{{ ownership }}</propertyType>
 		{{ endif }}
 		{{ if build_date|not_empty }}
 			<built>{{ build_date }}</built>
